syntax = "proto2";

package connected_users;

message User{
    optional string username = 1;
    optional string ip = 2;
    optional uint32 port = 3;
    optional uint64 joined_timestamp = 4;
}

message ConnectedUsers{
    repeated User users = 1;
}