syntax = "proto2";

package kick_user;

message KickUser{
    optional string username = 1;
}